# PyPass

./: README.md  hatch.toml  pyproject.toml
src/PyPass_Xorg/: PyGenKey.py  PyPass.py
